; ModuleID = '/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_mkdir.c_wceex_mkdir.c'
source_filename = "/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_mkdir.c_wceex_mkdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wceex_mkdir(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i32, i32* @CP_ACP, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @MultiByteToWideChar(i32 %7, i32 0, i8* %8, i32 -1, i32* null, i64 0)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = mul i64 4, %10
  %12 = trunc i64 %11 to i32
  %13 = call i64 @malloc(i32 %12)
  %14 = inttoptr i64 %13 to i32*
  store i32* %14, i32** %6, align 8
  %15 = load i32, i32* @CP_ACP, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i64 @MultiByteToWideChar(i32 %15, i32 0, i8* %16, i32 -1, i32* %17, i64 %18)
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @CreateDirectory(i32* %20, i32* null)
  store i32 %21, i32* %4, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @free(i32* %22)
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

27:                                               ; preds = %1
  %28 = call i32 (...) @GetLastError()
  store i32 %28, i32* @errno, align 4
  store i32 -1, i32* %2, align 4
  br label %29

29:                                               ; preds = %27, %26
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i64 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i64) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @CreateDirectory(i32*, i32*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
